--- a/app/src/main/res/layout/fragment_bottom.xml
+++ b/app/src/main/res/layout/fragment_bottom.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fBottom"
     android:layout_width="match_parent"
@@ -6,11 +7,30 @@
     tools:context="bastide.domergue.lyra.BottomFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:text="@string/hello_blank_fragment"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="25dp"
+        android:id="@+id/floatingActionButton"
+        app:backgroundTint="@android:color/holo_blue_dark" />
+
+    <TextView
+        android:text="@string/bottomFragmentText"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView2"
+        android:padding="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="@color/common_google_signin_btn_text_dark_focused"
+        android:textColor="@android:color/white"
+        tools:textColor="@android:color/white" />
 </RelativeLayout>
