--- a/app/src/main/res/layout/fragment_bottom.xml
+++ b/app/src/main/res/layout/fragment_bottom.xml
@@ -18,7 +18,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="25dp"
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/addButton"
+        android:onClick="addMessage"
         app:backgroundTint="@android:color/holo_blue_dark" />
 
     <TextView
