--- a/app/src/main/res/layout/activity_add_message.xml
+++ b/app/src/main/res/layout/activity_add_message.xml
@@ -53,6 +53,7 @@
         android:layout_below="@+id/message"
         android:layout_alignParentStart="true"
         android:layout_marginTop="10dp"
-        android:id="@+id/submit" />
+        android:id="@+id/submit"
+        android:onClick="validateMessage" />
 
 </RelativeLayout>
