--- a/app/src/main/res/layout/activity_add_message.xml
+++ b/app/src/main/res/layout/activity_add_message.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="bastide.domergue.lyra.AddMessageActivity">
+    tools:context="bastide.domergue.lyra.activity.AddMessageActivity">
 
     <TextView
         android:text="@string/yourPosition"
